--- a/.ci.yaml
+++ b/.ci.yaml
@@ -2502,6 +2502,16 @@ targets:
         ["devicelab", "hostonly"]
       task_name: flutter_gallery_macos__start_up
 
+  - name: Mac flutter_view_macos__start_up
+    bringup: true # New target https://github.com/flutter/flutter/issues/109633
+    presubmit: false
+    recipe: devicelab/devicelab_drone
+    timeout: 60
+    properties:
+      tags: >
+        ["devicelab", "hostonly"]
+      task_name: flutter_view_macos__start_up
+
   - name: Mac framework_tests_libraries
     recipe: flutter/flutter_drone
     timeout: 60
