[codesign] bring up verify codesign test on release branches (#112096)

--- a/.ci.yaml
+++ b/.ci.yaml
@@ -2975,6 +2975,7 @@ targets:
       - dev
       - beta
       - stable
+      - flutter-\d+\.\d+-candidate\.\d+
     recipe: flutter/flutter
     timeout: 60
     properties:
