[Android] Fix spell_check integration test flakiness (#112109)

--- a/.ci.yaml
+++ b/.ci.yaml
@@ -2107,7 +2107,7 @@ targets:
       task_name: routing_test
 
   - name: Linux_android spell_check_test
-    bringup: true
+    bringup: true # TESTING PURPOSES ONLY
     recipe: devicelab/devicelab_drone
     presubmit: false
     timeout: 60
