Do not run customer testing on release candidate branches. (#119979)
These tests try to use a commit contemporary to the framework commit in
customer repositories. This won't work because a CP to the framework
release candidate branch may be recent even though the release candidate
branch can be months old.

--- a/.ci.yaml
+++ b/.ci.yaml
@@ -290,6 +290,8 @@ targets:
       - .ci.yaml
 
   - name: Linux customer_testing
+    enabled_branches:
+      - master
     recipe: flutter/flutter
     timeout: 60
     properties:
@@ -2617,6 +2619,8 @@ targets:
       task_name: complex_layout_scroll_perf_macos__timeline_summary
 
   - name: Mac customer_testing
+    enabled_branches:
+      - master
     recipe: flutter/flutter
     timeout: 60
     properties:
@@ -4155,6 +4159,8 @@ targets:
         ["framework", "hostonly", "shard", "windows"]
 
   - name: Windows customer_testing
+    enabled_branches:
+      - master
     recipe: flutter/flutter
     timeout: 60
     properties:
