--- a/.ci.yaml
+++ b/.ci.yaml
@@ -3255,6 +3255,7 @@ targets:
     recipe: flutter/flutter_drone
     timeout: 60
     properties:
+      cpu: x86 # https://github.com/flutter/flutter/issues/120014
       dependencies: >-
         [
           {"dependency": "android_sdk", "version": "version:33v6"},
