Added integration test for wide gamut support. (#119657)
* Added integration test for wide gamut support.

* cleaned up

* deleted files that can be generated

* switched back to standard flutter in the shell script

* added devicelab task

* removed analysis options

* analyzer

* Fixed task

* made local_run.sh not executable

* analyzer

* removed the logo asset

* added task to ci

* updated pubspec

* analysis errors fixed

* updated pubspec

--- a/.ci.yaml
+++ b/.ci.yaml
@@ -3898,6 +3898,16 @@ targets:
         ["devicelab", "ios", "mac"]
       task_name: simple_animation_perf_ios
 
+  - name: Mac_ios wide_gamut_ios
+    recipe: devicelab/devicelab_drone
+    bringup: true
+    presubmit: false
+    timeout: 60
+    properties:
+      tags: >
+        ["devicelab", "ios", "mac"]
+      task_name: wide_gamut_ios
+
   - name: Mac_ios simple_animation_perf_impeller_ios
     recipe: devicelab/devicelab_drone
     presubmit: false
