Force Mac plugin_test to run on x64 bots (#120714)

--- a/.ci.yaml
+++ b/.ci.yaml
@@ -2988,6 +2988,7 @@ targets:
     recipe: devicelab/devicelab_drone
     timeout: 60
     properties:
+      cpu: x86 # https://github.com/flutter/flutter/issues/119750
       dependencies: >-
         [
           {"dependency": "android_sdk", "version": "version:33v6"},
