--- a/packages/flutter_tools/templates/template_manifest.json
+++ b/packages/flutter_tools/templates/template_manifest.json
@@ -251,9 +251,11 @@
         "templates/plugin/android-java.tmpl/build.gradle.tmpl",
         "templates/plugin/android-java.tmpl/projectName_android.iml.tmpl",
         "templates/plugin/android-java.tmpl/src/main/java/androidIdentifier/pluginClass.java.tmpl",
+        "templates/plugin/android-java.tmpl/src/test/java/androidIdentifier/pluginClassTest.java.tmpl",
         "templates/plugin/android-kotlin.tmpl/build.gradle.tmpl",
         "templates/plugin/android-kotlin.tmpl/projectName_android.iml.tmpl",
         "templates/plugin/android-kotlin.tmpl/src/main/kotlin/androidIdentifier/pluginClass.kt.tmpl",
+        "templates/plugin/android-kotlin.tmpl/src/test/kotlin/androidIdentifier/pluginClassTest.kt.tmpl",
         "templates/plugin/android.tmpl/.gitignore",
         "templates/plugin/android.tmpl/gradle/wrapper/gradle-wrapper.properties",
         "templates/plugin/android.tmpl/gradle.properties.tmpl",
