Increase Linux docs_test timeout (#120899)
The `Linux docs_test` target has timed out repeatedly. This is a short-term mitigation to prevent unnecessary framework tree closures. In the future we should remove docset generation from post-submit `Linux docs_test`. See: https://github.com/flutter/flutter/issues/120901.

See this similar change: https://github.com/flutter/flutter/pull/120718

--- a/.ci.yaml
+++ b/.ci.yaml
@@ -303,7 +303,7 @@ targets:
   - name: Linux docs_publish
     recipe: flutter/flutter
     presubmit: false
-    timeout: 90
+    timeout: 90 # https://github.com/flutter/flutter/issues/120901
     properties:
       cores: "32"
       dependencies: >-
@@ -321,7 +321,7 @@ targets:
 
   - name: Linux docs_test
     recipe: flutter/flutter
-    timeout: 60
+    timeout: 90 # https://github.com/flutter/flutter/issues/120901
     properties:
       cores: "32"
       dependencies: >-
