Use packages/packages recipe. (#122822)
Use packages/packages recipe.

--- a/.ci.yaml
+++ b/.ci.yaml
@@ -380,7 +380,7 @@ targets:
       task_name: release_smoke_test
 
   - name: Linux flutter_packaging_test
-    recipe: packaging_v2/packaging_v2
+    recipe: packaging/packaging
     timeout: 60
     bringup: true
     properties:
@@ -2708,7 +2708,7 @@ targets:
       task_name: flutter_gallery_macos__start_up
 
   - name: Mac flutter_packaging_test
-    recipe: packaging_v2/packaging_v2
+    recipe: packaging/packaging
     timeout: 60
     bringup: true
     properties:
@@ -2717,7 +2717,7 @@ targets:
         ["framework", "hostonly", "shard", "mac"]
 
   - name: Mac_arm64 flutter_packaging_test
-    recipe: packaging_v2/packaging_v2
+    recipe: packaging/packaging
     timeout: 60
     bringup: true
     properties:
@@ -4877,7 +4877,7 @@ targets:
       task_name: windows_chrome_dev_mode
 
   - name: Windows flutter_packaging_test
-    recipe: packaging_v2/packaging_v2
+    recipe: packaging/packaging
     timeout: 60
     bringup: true
     properties:
@@ -4924,7 +4924,7 @@ targets:
       task_name: flutter_tool_startup__macos
 
   - name: Linux flutter_packaging
-    recipe: packaging_v2/packaging_v2
+    recipe: packaging/packaging
     timeout: 60
     scheduler: release
     bringup: true
@@ -4937,7 +4937,7 @@ targets:
         ["framework", "hostonly", "shard", "linux"]
 
   - name: Mac flutter_packaging
-    recipe: packaging_v2/packaging_v2
+    recipe: packaging/packaging
     timeout: 60
     scheduler: release
     bringup: true
@@ -4953,7 +4953,7 @@ targets:
 
 
   - name: Mac_arm64 flutter_packaging
-    recipe: packaging_v2/packaging_v2
+    recipe: packaging/packaging
     timeout: 60
     scheduler: release
     bringup: true
@@ -4966,7 +4966,7 @@ targets:
         ["framework", "hostonly", "shard", "mac"]
 
   - name: Windows flutter_packaging
-    recipe: packaging_v2/packaging_v2
+    recipe: packaging/packaging
     timeout: 60
     scheduler: release
     bringup: true
