[macOS] Add platform_channel sample/test (#123141)
Adds a macOS implementation of the platform_channel example,
demonstrating method channels and event channels with a battery power
plugin.

Adds platform_channel_sample_test_macos macOS host test to verify the
sample works.

Issue: https://github.com/flutter/flutter/issues/79204

--- a/.ci.yaml
+++ b/.ci.yaml
@@ -2972,6 +2972,20 @@ targets:
         ]
       task_name: platform_view_macos__start_up
 
+  - name: Mac platform_channel_sample_test_macos
+    bringup: true
+    recipe: devicelab/devicelab_drone
+    presubmit: false
+    timeout: 60
+    properties:
+      dependencies: >-
+        [
+          {"dependency": "xcode", "version": "14a5294e"}
+        ]
+      tags: >
+        ["devicelab", "hostonly", "mac"]
+      task_name: platform_channel_sample_test_macos
+
   - name: Mac plugin_dependencies_test
     recipe: devicelab/devicelab_drone
     timeout: 60
