[macOS] Battery check in platform_channel sample (#123354)
Adds a check for the case where a device has no battery present. The
devicelab test expects the text "No battery." in the case where a device
has no battery. This is triggered by returning an error with a
NO_BATTERY error code.

Also applies some cosmetic fixes:
* Amends a copyright notice to Flutter instead of com.example
* Deletes an unused test.

Issue: https://github.com/flutter/flutter/issues/79204

--- a/examples/platform_channel/macos/Runner/Configs/AppInfo.xcconfig
+++ b/examples/platform_channel/macos/Runner/Configs/AppInfo.xcconfig
@@ -11,4 +11,4 @@ PRODUCT_NAME = platform_channel
 PRODUCT_BUNDLE_IDENTIFIER = com.example.platformChannel
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2023 com.example. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2014 The Flutter Authors. All rights reserved.
